--- a/rviz/CMakeLists.txt
+++ b/rviz/CMakeLists.txt
@@ -62,7 +62,7 @@ endif()
 
 find_package(OpenGL REQUIRED)
 
-find_package(PythonLibs REQUIRED)
+find_package(PythonLibs 3.4 REQUIRED)
 
 find_package(Qt5 REQUIRED COMPONENTS OpenGL)
 
